# cargo-instruments

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: app.rs  error.rs  instruments.rs  main.rs  opt.rs
