[package]
name = "cargo-instruments"
version = "0.4.12"
authors = ["Colin Rofls <colin@cmyr.net>"]
license = "MIT"
description = "Profile binary targets on macOS using Xcode Instruments."
repository = "https://github.com/cmyr/cargo-instruments"
documentation = "https://github.com/cmyr/cargo-instruments"
categories = ["development-tools::cargo-plugins", "development-tools::profiling"]
keywords = ["profiling", "xcode", "cargo-subcommand", "trace", "macos"]
readme = "README.md"
edition = "2021"

[features]
vendored-openssl = ["cargo/vendored-openssl"]

[dependencies]
anyhow = "1.0"
cargo = "0.88"
chrono = "0.4.6"
structopt = { version = "^0.3", default-features = false }
semver = "1.0"
env_logger = "0.11.0"
log = "0.4.28"
